--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Get the actual emoji  font */ 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Colr+Emoji+Glyf');
+
+#root {
+  font-family: system-ui;
+  font-size: 1.5rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  --background: hsl(0, 0%, 10%);
+  --backgroundLight: hsl(0, 0%, 20%);
+  --hover: hsl(0, 0%, 25%);
+  --color: hsl(0, 0%, 90%);
 }
+
+
+#root {
+  color: var(--color);
+  background-color: var(--background);
+}
+
